welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:6: error: unclosed character literal
    case (_) => return ''+a
                       ^fizzBuzz:6: error: ';' expected but something found.
    case (_) => return ''+a
                       ^