welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.code
def fizzBuzz(a:Int):String = {
  (a) match {
    case (i) if i%3 == 0 & i%5 != 0 => return "Fizz"
    case (i) if i%5 == 0 & i%3 != 0 => return "Buzz" 
    case (i) if i%3 == 0 & i%5 == 0 => return "Fizz Buzz"
    case (_) => return ''+a
  }
}